--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    {% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+
 </head>
 <body>
     {% if latest_question_list %}
